# icfp2024

./: 3d.md  LICENSE  icfp2024.cabal  lambdaman.md
app/: Main.hs
input/: lambdaman3.txt  lambdaman4.txt
input-pretty/: efficiency1.txt  efficiency10.txt  efficiency11.txt  efficiency12.txt  efficiency13.txt  efficiency2.txt  efficiency3.txt  efficiency4.txt  efficiency5.txt  efficiency6.txt  efficiency7.txt  efficiency8.txt  efficiency9.txt  spaceship1.txt  spaceship10.txt  spaceship11.txt  spaceship12.txt  spaceship13.txt  spaceship14.txt  spaceship15.txt  spaceship16.txt  spaceship17.txt  spaceship18.txt  spaceship19.txt  spaceship2.txt  spaceship20.txt  spaceship21.txt  spaceship22.txt  spaceship23.txt  spaceship24.txt  spaceship25.txt  spaceship3.txt  spaceship4.txt  spaceship5.txt  spaceship6.txt  spaceship7.txt  spaceship8.txt  spaceship9.txt
input-raw/: lambdaman21.txt
output/: 3d.txt  efficiency1.txt  efficiency3.txt  lambdaman1.txt  lambdaman10.txt  lambdaman11.txt  lambdaman12.txt  lambdaman13.txt  lambdaman14.txt  lambdaman15.txt  lambdaman17.txt  lambdaman18.txt  lambdaman19.txt  lambdaman20.txt  lambdaman21.txt  lambdaman3.txt  lambdaman4.txt  lambdaman5.txt  lambdaman7.txt  lambdaman9.txt  spaceship10.txt  spaceship11.txt  spaceship14.txt  spaceship15.txt  spaceship16.txt  spaceship17.txt  spaceship18.txt  spaceship19.txt  spaceship2.txt  spaceship20.txt  spaceship21.txt  spaceship22.txt  spaceship3.txt  spaceship4.txt  spaceship5.txt  spaceship6.txt  spaceship7.txt  spaceship8.txt  spaceship9.txt
