cabal-version:      3.0
name:               icfp2024
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-2-Clause
license-file:       LICENSE
author:             Sjoerd Visscher
maintainer:         sjoerd.visscher@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable icfp2024
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.19.1.0
        , astar
        , bytestring
        , containers
        , directory
        , req
        , unordered-containers
    hs-source-dirs:   app
    default-language: GHC2021
